Initial exploration of the data

--- a/Adam_initial_exploration.html
+++ b/Adam_initial_exploration.html
@@ -736,7 +736,7 @@ Name: count, dtype: float64</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[68]:</div>
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">crime_chicago_count</span><span class="p">[</span><span class="s1">&#39;count&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
@@ -750,13 +750,16 @@ Name: count, dtype: float64</pre>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[68]:</div>
+<div class="output_area"><div class="prompt"></div>
+<div class="output_subarea output_text output_error">
+<pre>
+<span class="ansired">---------------------------------------------------------------------------</span>
+<span class="ansired">NameError</span>                                 Traceback (most recent call last)
+<span class="ansigreen">&lt;ipython-input-1-dc404f81a783&gt;</span> in <span class="ansicyan">&lt;module&gt;</span><span class="ansiblue">()</span>
+<span class="ansigreen">----&gt; 1</span><span class="ansired"> </span>crime_chicago_count<span class="ansiblue">[</span><span class="ansiblue">&apos;count&apos;</span><span class="ansiblue">]</span><span class="ansiblue">.</span>max<span class="ansiblue">(</span><span class="ansiblue">)</span><span class="ansiblue"></span>
 
-
-<div class="output_text output_subarea output_execute_result">
-<pre>14504</pre>
+<span class="ansired">NameError</span>: name &apos;crime_chicago_count&apos; is not defined</pre>
 </div>
-
 </div>
 
 </div>
